Improper Alignment CSS Fixes
Adjusted the category titles and stats to properly line up with eachother

--- a/less/categories.less
+++ b/less/categories.less
@@ -40,6 +40,7 @@
 				line-height: 22px;
 				margin: 0;
 				margin-left: 62px;
+				margin-top: 4px;
 
 				strong {
 					color: @gray-dark;
@@ -190,7 +191,7 @@
 .stats {
 	font-size: 20px;
 	text-align: center;
-	margin-top: 7px;
+	margin-top: 3px;
 	line-height: 22px;
 
 	small {
